# CommitFlow

./: .env.example  .gitignore  .vercelignore  Dockerfile.api  README.md  docker-compose.yml  main.py  pyproject.toml  railway.env.example  railway.toml  requirements.txt  test_fetch.py  vercel.env.example  vercel.json  vercel_handler.py
api/: config.py  index.py  main.py  schemas.py  security.py
api/auth/: cookies.py  deps.py  tokens.py
api/db/: models.py  session.py
api/routers/: auth.py  redmine.py
api/services/: email.py  otp.py  user_settings.py
app/: cli.py
app/ai/: anthropic_provider.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  provider.py
app/config/: settings.py
app/database/: connection.py  models.py  repository.py
app/github/: client.py
app/gitlab/: client.py
app/mappings/: resolver.py
app/models/: domain.py
app/redmine/: client.py
app/services/: classifier.py  factory.py  reporting.py  sync.py  todo_planner.py
app/utils/: helpers.py
backend/: config.py  main.py  schemas.py  security.py
backend/auth/: cookies.py  deps.py  tokens.py
backend/db/: models.py  session.py
backend/routers/: auth.py  redmine.py  settings.py  sync.py
backend/services/: email.py  email_templates.py  otp.py  user_settings.py
configs/: repo_mappings.yaml
tests/: conftest.py  test_ai_providers.py  test_cli.py  test_clients.py  test_services.py
tools/: __init__.py
tools/gmail_mail_bridge/: Dockerfile  __init__.py  main.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.jsx  api.js  auth.jsx  dayLogState.js  styles.css  syncDeskState.js
web/src/components/: SecretField.jsx
web/src/pages/: AccountPage.jsx  AuthCallback.jsx  ForgotPasswordPage.jsx  LoginPage.jsx  SettingsPage.jsx  SyncPage.jsx  TodosPage.jsx  VerifyEmailPage.jsx
