[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commitflow"
version = "1.0.0"
description = "AI-powered worklog automation for Redmine from Git commits"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Principal Software Architect" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "rapidfuzz>=3.6.0",
    "SQLAlchemy>=2.0.27",
]

[project.scripts]
commitflow = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
