[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commitflow"
version = "1.0.0"
description = "AI-powered worklog automation for Redmine from Git commits"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Principal Software Architect" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "rapidfuzz>=3.6.0",
    "SQLAlchemy>=2.0.27",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1",
    "email-validator>=2.1.0",
    "cryptography>=42.0.0",
]

[project.scripts]
commitflow = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
